<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="410dp"
        android:layout_height="731dp"
        android:background="@color/mint_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <TextView
        android:id="@+id/txtCon"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/text_extra"
        android:gravity="center"
        android:text="@string/app_phone"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageButton
        android:id="@+id/btnPhone"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@drawable/button_pred"
        android:scaleType="fitCenter"
        android:contentDescription="@string/phone_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        app:srcCompat="@drawable/phone_call_icon">

    </ImageButton>

    <ImageView
        android:id="@+id/iv_change_phone"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/sharp_conf"
        android:contentDescription="@string/phone_goToConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/go_config_icon">

    </ImageView>

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sharp_conf">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>