<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view2"
        android:layout_width="410dp"
        android:layout_height="731dp"
        android:background="@color/mint_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/vista1_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <TextView
        android:id="@+id/textMain"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/text_extra"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <ImageButton
        android:id="@+id/iv_change_phone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/sharp_conf"
        android:src="@drawable/go_config_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="95dp"
        android:layout_height="339dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_view_extra"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/textGmail"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="GMAIL"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnGmail"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextGmail"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gmail_icon" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="URL"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnUrl"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextUrl"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/url_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view5"
        android:layout_width="95dp"
        android:layout_height="339dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_view_extra"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/textCall"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="LLAMADA"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnLlamada"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextCall"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/phone_call_icon" />

        <TextView
            android:id="@+id/textAlarm"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="ALARMA"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnAlarm"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextAlarm"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/alarm_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view4"
        android:layout_width="95dp"
        android:layout_height="339dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_view_extra"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/textDados"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="DADOS"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnDados"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextDados"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dados_icon" />

        <TextView
            android:id="@+id/textChistes"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/text_extra"
            android:gravity="center"
            android:text="CHISTES"
            android:textColor="@color/jet_grey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnChistes"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_pred"
            android:contentDescription="@string/buttonTextAudios"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/audio_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/text_extra"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>